data/all_generated_tests/raw_wast_tests/br_table_StackCorruption_2087.wast
;; 7. **Test7: Forward vs Backward Branch Misalignment**    - **Description:** Use a `br_table` to toggle between forward and backward branches with mismatched operand stack expectations.    - **Stack Corruption Check:** Determine if switching between these branches results in stack overflow, underflow, or mismanagement.

(assert_invalid
  (module
    (func $test7_forward_vs_backward
      (block
        (loop $loop
          (i32.const 0)
          (br_table 1 0 $loop (i32.const 1))
        )
      )
    )
  )
  "type mismatch"
)